code became right aligned - no longer

--- a/css/default.css
+++ b/css/default.css
@@ -41,8 +41,8 @@ margin:4px 0 4px 10px;
 
 li { padding:0 4px; color:#ccc; list-style: none; }
 
-li span { float:right; font-family:monofur, monaco, courier; color:#888; }
-li a { font-weight:200;}
+ul.posts li span { float:right; font-family:monofur, monaco, courier; color:#888; }
+ul.posts li a { font-weight:200;}
 
 blockquote {
 border:1px dotted #e5e5e5;
